# chatbot-be

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: backend-ci.yaml
docker/python/: Dockerfile
src/chatbot_be/: main.py
src/chatbot_be/api/: __init__.py
src/chatbot_be/api/v1/: __init__.py  healthcheck.py
tests/api/v1/: test_healthcheck.py
